# Raptor-Detector

./: .gitignore  .gitmodules  README.md  bird_detection.yaml  dataset_manifest.json  hyp.raptor_detector.yaml  hyp.small_bird_detector.yaml  pyproject.toml  raptor_data.yaml  yolov8n-p2.yaml
coco_converted3/labels/sod4bird_train_coco/: 00001_3072_0_3712_640.txt  00001_3200_0_3840_640.txt  00002_2560_1024_3200_1664.txt  00002_2560_512_3200_1152.txt  00002_3072_1024_3712_1664.txt  00002_3200_1024_3840_1664.txt  00003_1024_0_1664_640.txt  00003_1536_0_2176_640.txt  00005_2048_512_2688_1152.txt  00006_1024_1024_1664_1664.txt  00007_2048_0_2688_640.txt  00007_2048_512_2688_1152.txt  00008_1536_1024_2176_1664.txt  00008_3072_1520_3712_2160.txt  00008_3200_1520_3840_2160.txt  00010_2560_1024_3200_1664.txt  00010_3072_1024_3712_1664.txt  00010_3072_1520_3712_2160.txt  00010_3200_1024_3840_1664.txt  00010_3200_1520_3840_2160.txt  00012_1024_1520_1664_2160.txt  00012_1536_1024_2176_1664.txt  00012_2048_1024_2688_1664.txt  00012_512_1520_1152_2160.txt  00013_1536_512_2176_1152.txt  00013_2048_1024_2688_1664.txt  00013_2048_512_2688_1152.txt  00015_2560_1024_3200_1664.txt  00015_2560_512_3200_1152.txt  00015_3072_1024_3712_1664.txt  00015_3072_512_3712_1152.txt  00015_3200_1024_3840_1664.txt  00017_1024_1024_1664_1664.txt  00017_1536_1024_2176_1664.txt  (+19579 more)
scripts/: compare_temp.py  maifest_gen.py  make_data.py  make_val_splot.py  split_data.py  temp.py  test_leaf_vis.py  visualise.py  yolo_gen.py
src/: basic_model.py  leaf_train_stage_2.py  train_leaf.py  train_v8_p2.py
